--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -4,3 +4,10 @@
 @import '_colors';
 @import '_fonts';
 @import '_typography';
+
+@import '_carousel';
+
+#logo-ajuar {
+    width: 90px;
+    height: auto;
+}
