--- a/public/scss/_fonts.scss
+++ b/public/scss/_fonts.scss
@@ -1,31 +1,15 @@
-//ITC Avant Garde Std Bk Regular
+//Kollektif
 @font-face{
-    font-family:'ITC';
-    src: url('../fonts/ITCAvantGardeStd-Bk.ttf') format('truetype');
+    font-family:'Kollektif';
+    src: url('../fonts/kollektif.ttf') format('truetype');
 }
-//ITC Avant Garde Std XL
+//League Gothic regular
 @font-face{
-    font-family:'ITC_XL';
-    src: url('../fonts/ITCAvantGardeStd-XLt.ttf') format('truetype');
+    font-family:'League Gothic';
+    src: url('../fonts/LeagueGothic-Regular.otf') format('opentype');
 }
-//Qualy bold
+//Bebas neue
 @font-face{
-    font-family:'Qualy Bold';
-    src: url('../fonts/QualyBold.ttf') format('truetype');
-}
-//Quick Signature
-@font-face{
-    font-family:'Quick Signature';
-    src: url('../fonts/QuickSignature.otf') format('opentype');
-}
-//Parisienne Regular
-@font-face{
-    font-family:'Parisienne Regular';
-    src: url('../fonts/Parisienne-Regular.ttf') format('truetype');
-}
-
-//Kristi Regular
-@font-face{
-    font-family:'Kristi Regular';
-    src: url('../fonts/Kristi-Regular.ttf') format('truetype');
+    font-family:'Bebas Neue';
+    src: url('../fonts/BebasNeue-Regular.ttf') format('truetype');
 }
