--- a/public/scss/_typography.scss
+++ b/public/scss/_typography.scss
@@ -1,71 +1,35 @@
-//ITC Avant Garde Std Bk Regular
-.avant-garde-bk{
-    font-family:'ITC';
+//Kollektif
+.kollektif{
+    font-family:'Kollektif';
 }
-//ITC Avant Garde Std XL
-.avant-garde-xl{
-    font-family:'ITC_XL';
+//League Gothic regular
+.league-gothic{
+    font-family:'League Gothic';
 }
-//Qualy bold
-.qualy-bold{
-    font-family:'Qualy Bold';
-}
-//Quick Signature
-.parisienne-regular{
-    font-family:'Parisienne Regular';
-}
-//Kristi Regular
-.kristi-regular{
-    font-family:'Kristi Regular';
+.bebas-neue{
+    font-family:'Bebas Neue';
+    letter-spacing: 7px;
+
 }
 
-.font-lg-20{
-    @include responsiveLarge(){
-        font-size: 20px;
+.home-font{
+    font-size: 20px;
+}
+
+.ajuar-home-font{
+    font-size: 65px;
+    @include responsiveLarge() {
+        font-size: 80px;
     }
 }
 
-.font-lg-70{
-    @include responsiveLarge(){
-        font-size: 70px;
+.ajuar-contact-font{
+    font-size: 32px;
+    @include responsiveLarge() {
+        font-size: 50px;
     }
 }
 
-.font-lg-60{
-    @include responsiveLarge(){
-        font-size: 60px;
-    }
-}
-.font-intro-cards{
-    @include responsiveLarge(){
-        font-size: 20px;
-    }
-    @include responsiveMobile(){
-        font-size: 20px;
-    }
-}
-
-.banner-titles{
-    @include responsiveLarge(){
-        font-size: 45px;
-    }
-    @include responsiveMobile(){
-        font-size: 40px;
-    }
-}
-
-.wedding-titles{
-    @extend .banner-titles;
-    @include flexCenter(row);
-    @include responsive(768px, 1199px){
-        min-height: 75px;
-    }
-}
-
-.portrait-titles{
-    @extend .banner-titles;
-    @include flexCenter(row);
-    @include responsive(768px, 991px){
-        min-height: 115px;
-    }
+#ajuar-text {
+    font-size: 80px;
 }
