--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -18,7 +18,7 @@
     <!-- Navbar -->
     {{>navbar}}
     <!-- Navbar -->
-
+    
     <!-- Home images -->
     <div class="container-fluid p-0 carousel-container">
         <!-- Carousel home -->
@@ -52,13 +52,89 @@
     </div>
     <!-- Home images -->
 
-    <div class="container-fluid grey-af-bg py-4">
+    <div class="container-fluid white-bg py-4 sections-home center">
         <div class="container">
             <div class="row">
-                
+                <div class="col-12 py-4">
+                    <h1 class="text-center bebas-neue">CATÁLOGO</h1>
+                </div>
+                <div class="col-lg-6 center catalog">
+                    <img src="img/home/catalogo-mujer.png" alt="...">
+                    <div class="pt-4"><p class="text-center kollektif">Conoce nuestro catálogo de ropa para <span class="yellow-ajuar">MUJER</span> y personaliza con nuestros diseños.</p></div>
+                </div>
+                <div class="col-lg-6 center catalog">
+                    <img src="img/home/catalogo-hombre.png" alt="...">
+                    <div class="pt-4"><p class="text-center kollektif">Conoce nuestro catálogo de ropa para <span class="light-blue-ajuar">HOMBRE</span> y personaliza con nuestros diseños.</p></div>
+                </div>
             </div>
         </div>
     </div>
+
+    <div class="container-fluid yellow-ajuar-bg py-4 sections-home center">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 py-4">
+                    <h1 class="text-center bebas-neue">LO FAVORITO</h1>
+                </div>
+                <div class="col-lg-4 center pb-4">
+                    <img src="img/home/favorito-1.png" class="catalog-img pb-4" alt="...">
+                    <button type="button" class="custom-btn py-3 px-4 font-weight-bold kollektif">Saber más</button>
+                </div>
+                <div class="col-lg-4 center pb-4">
+                    <img src="img/home/favorito-2.png" class="catalog-img pb-4" alt="...">
+                    <button type="button" class="custom-btn py-3 px-4 font-weight-bold kollektif">Saber más</button>
+                </div>
+                <div class="col-lg-4 center pb-4">
+                    <img src="img/home/favorito-3.png" class="catalog-img pb-4" alt="...">
+                    <button type="button" class="custom-btn py-3 px-4 font-weight-bold kollektif">Saber más</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid white-bg py-4 sections-home center">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 center">
+                    <p class= "home-font kollektif"><span id="ajuar-text" class="bebas-neue pr-2">AJUAR</span>es una empresa comprometida con el medio ambiente, que busca ofrecer la mejor calidad
+                         en ropa, con diseños mexicanos personalizados para agregar ese factor extra a cualquier
+                          prenda.</p>
+
+                    <p class= "home-font kollektif">Nuestro objetivo es darle una segunda vida a la ropa, basándonos en los más altos 
+                        estándares de higiene, y así, disminuir la producción contaminante de materia prima.</p>
+                </div>
+                <div class="col-lg-6 center">
+                    <img src="img/home/about.png" class="ajuar-img py-lg-0 py-4" alt="...">
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="container-fluid bg-img-home py-4 center">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 center">
+                    <div class="center-h">
+                        <i class="fab fa-facebook-square pr-4 fa-4x"></i>
+                        <h2 class="py-3 ajuar-contact-font bebas-neue">@AjuarMEX</h2>
+                    </div>
+                    <div class="center-h">
+                        <i class="fab fa-instagram pr-4 fa-4x"></i>
+                        <h2 class="py-3 ajuar-contact-font bebas-neue">@AjuarMEX</h2>
+                    </div>
+                    <div class="center-h">
+                        <i class="fab fa-whatsapp pr-4 fa-4x"></i>
+                        <h2 class="py-3 ajuar-contact-font bebas-neue">(55)4554 8964</h2>
+                    </div>
+                </div>
+                <div class="col-lg-6 center">
+                    <h1 class="ajuar-home-font bebas-neue pt-lg-0 pt-3">AJUAR.MX</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
 
     <script src="js/jquery-3.5.1.min.js"></script>
