--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -1,30 +1,30 @@
 <div class="container-fluid navbar-light bg-light fixed-top">
-    <nav class="navbar navbar-expand-lg">
-
-        <a class="navbar-brand p-0" href="home"><img id="logo-ajuar" src="img/logo.png" alt="logo de la empresa"></a>
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item {{#if active.home}}active{{/if}}">
-                    <a class="nav-link" href="home">INICIO</a>
-                </li>
-                <li class="nav-item {{#if active.about}}active{{/if}}">
-                    <a class="nav-link" href="about">NOSOTROS</a>
-                </li>
-                <li class="nav-item {{#if active.store}}active{{/if}}">
-                    <a class="nav-link" href="store">CATÁLOGO</a>
-                </li>
-                <li class="nav-item {{#if active.designs}}active{{/if}}">
-                    <a class="nav-link" href="designs">DISEÑOS</a>
-                </li>
-                <li class="nav-item {{#if active.contact}}active{{/if}}">
-                    <a class="nav-link" href="contact">CONTACTANOS</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</div>
+        <nav class="navbar navbar-expand-lg">
+    
+            <a class="navbar-brand p-0" href="home"><img id="logo-ajuar" src="img/logo.png" alt="logo de la empresa"></a>
+    
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+    
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item mr-3 {{#if active.home}}active{{/if}}">
+                        <a class="nav-link league-gothic pb-0" href="home">INICIO</a>
+                    </li>
+                    <li class="nav-item mr-3 {{#if active.nosotros}}active{{/if}}">
+                        <a class="nav-link league-gothic pb-0" href="nosotros">NOSOTROS</a>
+                    </li>
+                    <li class="nav-item mr-3  {{#if active.catalogo}}active{{/if}}">
+                        <a class="nav-link league-gothic pb-0" href="catalogo">CATÁLOGO</a>
+                    </li>
+                    <li class="nav-item mr-3 {{#if active.designs}}active{{/if}}">
+                        <a class="nav-link league-gothic pb-0" href="designs">DISEÑOS</a>
+                    </li>
+                    <li class="nav-item {{#if active.contactanos}}active{{/if}}">
+                        <a class="nav-link league-gothic pb-0" href="contactanos">CONTACTANOS</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
